# AviUtl_SDK_Improved

./: CMakeLists.txt  README.md  aviutl_plugin_sdk.txt  makefile
example/: CMakeLists.txt
example/audio_filter/: CMakeLists.txt  audio_filter.cpp
example/avi_input/: CMakeLists.txt  avi_input.cpp
example/bmp_output/: CMakeLists.txt  bmp_output.cpp  bmp_output.rc
example/disp_filter/: CMakeLists.txt  disp_filter.cpp  disp_filter.rc
example/edit_filter/: CMakeLists.txt  edit_filter.cpp  edit_filter.rc
example/importexport_filter/: CMakeLists.txt  importexport_filter.cpp
example/interlace_filter/: CMakeLists.txt  interlace_filter.cpp
example/jp_resource/: CMakeLists.txt  jp_resource.rc
example/loupe_filter/: CMakeLists.txt  loupe_filter.cpp
example/multithread_filter/: CMakeLists.txt  multithread_filter.cpp
example/video_filter/: CMakeLists.txt  video_filter.cpp
example/yuy2_color/: CMakeLists.txt  yuy2_color.cpp
example/yuy2_filter/: CMakeLists.txt  yuy2_filter.cpp
include/: color.h
