add_subdirectory(audio_filter)
add_subdirectory(avi_input)
add_subdirectory(bmp_output)
add_subdirectory(disp_filter)
add_subdirectory(edit_filter)
add_subdirectory(importexport_filter)
add_subdirectory(interlace_filter)
add_subdirectory(jp_resource)
add_subdirectory(loupe_filter)
add_subdirectory(multithread_filter)
add_subdirectory(video_filter)
add_subdirectory(yuy2_color)
add_subdirectory(yuy2_filter)
